markdown/ai/1.0.0/_index.md
# ai 1.0.0

109 pages, converted from upstream Spring AsciiDoc.

- [api/advisors](./api/advisors.md)
- [api/aimetadata](./api/aimetadata.md)
- [api/audio/speech](./api/audio/speech.md)
- [api/audio/speech/openai-speech](./api/audio/speech/openai-speech.md)
- [api/audio/transcriptions](./api/audio/transcriptions.md)
- [api/audio/transcriptions/azure-openai-transcriptions](./api/audio/transcriptions/azure-openai-transcriptions.md)
- [api/audio/transcriptions/openai-transcriptions](./api/audio/transcriptions/openai-transcriptions.md)
- [api/bedrock-chat](./api/bedrock-chat.md)
- [api/bedrock](./api/bedrock.md)
- [api/chat-memory](./api/chat-memory.md)
- [api/chat/anthropic-chat](./api/chat/anthropic-chat.md)
- [api/chat/azure-openai-chat](./api/chat/azure-openai-chat.md)
- [api/chat/bedrock-converse](./api/chat/bedrock-converse.md)
- [api/chat/comparison](./api/chat/comparison.md)
- [api/chat/deepseek-chat](./api/chat/deepseek-chat.md)
- [api/chat/dmr-chat](./api/chat/dmr-chat.md)
- [api/chat/google-vertexai](./api/chat/google-vertexai.md)
- [api/chat/groq-chat](./api/chat/groq-chat.md)
- [api/chat/huggingface](./api/chat/huggingface.md)
- [api/chat/minimax-chat](./api/chat/minimax-chat.md)
- [api/chat/mistralai-chat](./api/chat/mistralai-chat.md)
- [api/chat/moonshot-chat](./api/chat/moonshot-chat.md)
- [api/chat/nvidia-chat](./api/chat/nvidia-chat.md)
- [api/chat/oci-genai/cohere-chat](./api/chat/oci-genai/cohere-chat.md)
- [api/chat/ollama-chat](./api/chat/ollama-chat.md)
- [api/chat/openai-chat](./api/chat/openai-chat.md)
- [api/chat/perplexity-chat](./api/chat/perplexity-chat.md)
- [api/chat/prompt-engineering-patterns](./api/chat/prompt-engineering-patterns.md)
- [api/chat/qianfan-chat](./api/chat/qianfan-chat.md)
- [api/chat/vertexai-gemini-chat](./api/chat/vertexai-gemini-chat.md)
- [api/chat/zhipuai-chat](./api/chat/zhipuai-chat.md)
- [api/chatclient](./api/chatclient.md)
- [api/chatmodel](./api/chatmodel.md)
- [api/cloud-bindings](./api/cloud-bindings.md)
- [api/docker-compose](./api/docker-compose.md)
- [api/effective-agents](./api/effective-agents.md)
- [api/embeddings](./api/embeddings.md)
- [api/embeddings/azure-openai-embeddings](./api/embeddings/azure-openai-embeddings.md)
- [api/embeddings/bedrock-cohere-embedding](./api/embeddings/bedrock-cohere-embedding.md)
- [api/embeddings/bedrock-titan-embedding](./api/embeddings/bedrock-titan-embedding.md)
- [api/embeddings/minimax-embeddings](./api/embeddings/minimax-embeddings.md)
- [api/embeddings/mistralai-embeddings](./api/embeddings/mistralai-embeddings.md)
- [api/embeddings/oci-genai-embeddings](./api/embeddings/oci-genai-embeddings.md)
- [api/embeddings/ollama-embeddings](./api/embeddings/ollama-embeddings.md)
- [api/embeddings/onnx](./api/embeddings/onnx.md)
- [api/embeddings/openai-embeddings](./api/embeddings/openai-embeddings.md)
- [api/embeddings/postgresml-embeddings](./api/embeddings/postgresml-embeddings.md)
- [api/embeddings/qianfan-embeddings](./api/embeddings/qianfan-embeddings.md)
- [api/embeddings/vertexai-embeddings-multimodal](./api/embeddings/vertexai-embeddings-multimodal.md)
- [api/embeddings/vertexai-embeddings-text](./api/embeddings/vertexai-embeddings-text.md)
- [api/embeddings/zhipuai-embeddings](./api/embeddings/zhipuai-embeddings.md)
- [api/etl-pipeline](./api/etl-pipeline.md)
- [api/generic-model](./api/generic-model.md)
- [api/image/azure-openai-image](./api/image/azure-openai-image.md)
- [api/image/openai-image](./api/image/openai-image.md)
- [api/image/qianfan-image](./api/image/qianfan-image.md)
- [api/image/stabilityai-image](./api/image/stabilityai-image.md)
- [api/image/zhipuai-image](./api/image/zhipuai-image.md)
- [api/imageclient](./api/imageclient.md)
- [api/index](./api/index.md)
- [api/mcp/mcp-client-boot-starter-docs](./api/mcp/mcp-client-boot-starter-docs.md)
- [api/mcp/mcp-helpers](./api/mcp/mcp-helpers.md)
- [api/mcp/mcp-overview](./api/mcp/mcp-overview.md)
- [api/mcp/mcp-server-boot-starter-docs](./api/mcp/mcp-server-boot-starter-docs.md)
- [api/moderation/mistral-ai-moderation](./api/moderation/mistral-ai-moderation.md)
- [api/moderation/openai-moderation](./api/moderation/openai-moderation.md)
- [api/multimodality](./api/multimodality.md)
- [api/prompt](./api/prompt.md)
- [api/retrieval-augmented-generation](./api/retrieval-augmented-generation.md)
- [api/speech](./api/speech.md)
- [api/structured-output-converter](./api/structured-output-converter.md)
- [api/testcontainers](./api/testcontainers.md)
- [api/testing](./api/testing.md)
- [api/tools-migration](./api/tools-migration.md)
- [api/tools](./api/tools.md)
- [api/transcriptions](./api/transcriptions.md)
- [api/usage-handling](./api/usage-handling.md)
- [api/vectordbs](./api/vectordbs.md)
- [api/vectordbs/apache-cassandra](./api/vectordbs/apache-cassandra.md)
- [api/vectordbs/azure-cosmos-db](./api/vectordbs/azure-cosmos-db.md)
- [api/vectordbs/azure](./api/vectordbs/azure.md)
- [api/vectordbs/chroma](./api/vectordbs/chroma.md)
- [api/vectordbs/coherence](./api/vectordbs/coherence.md)
- [api/vectordbs/couchbase](./api/vectordbs/couchbase.md)
- [api/vectordbs/elasticsearch](./api/vectordbs/elasticsearch.md)
- [api/vectordbs/gemfire](./api/vectordbs/gemfire.md)
- [api/vectordbs/hana](./api/vectordbs/hana.md)
- [api/vectordbs/hanadb-provision-a-trial-account](./api/vectordbs/hanadb-provision-a-trial-account.md)
- [api/vectordbs/mariadb](./api/vectordbs/mariadb.md)
- [api/vectordbs/milvus](./api/vectordbs/milvus.md)
- [api/vectordbs/mongodb](./api/vectordbs/mongodb.md)
- [api/vectordbs/neo4j](./api/vectordbs/neo4j.md)
- [api/vectordbs/opensearch](./api/vectordbs/opensearch.md)
- [api/vectordbs/oracle](./api/vectordbs/oracle.md)
- [api/vectordbs/pgvector](./api/vectordbs/pgvector.md)
- [api/vectordbs/pinecone](./api/vectordbs/pinecone.md)
- [api/vectordbs/qdrant](./api/vectordbs/qdrant.md)
- [api/vectordbs/redis](./api/vectordbs/redis.md)
- [api/vectordbs/typesense](./api/vectordbs/typesense.md)
- [api/vectordbs/understand-vectordbs](./api/vectordbs/understand-vectordbs.md)
- [api/vectordbs/weaviate](./api/vectordbs/weaviate.md)
- [concepts](./concepts.md)
- [contribution-guidelines](./contribution-guidelines.md)
- [getting-started](./getting-started.md)
- [glossary](./glossary.md)
- [index](./index.md)
- [observability/index](./observability/index.md)
- [providers/huggingface/index](./providers/huggingface/index.md)
- [upgrade-notes](./upgrade-notes.md)
